--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
     <grpc.version>1.18.0</grpc.version>
+    <hadoop-unit.version>3.6</hadoop-unit.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
@@ -16,44 +17,128 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
-    <dependency>
-        <groupId>io.vavr</groupId>
-        <artifactId>vavr</artifactId>
-        <version>0.10.2</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.pulsar/pulsar-broker -->
-    <dependency>
-      <groupId>org.apache.pulsar</groupId>
-      <artifactId>pulsar-broker</artifactId>
-      <version>2.4.1</version>
-    </dependency>
-    <dependency>
-      <groupId>io.grpc</groupId>
-      <artifactId>grpc-all</artifactId>
-      <version>${grpc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.grpc</groupId>
-      <artifactId>grpc-core</artifactId>
-      <version>${grpc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.grpc</groupId>
-      <artifactId>grpc-protobuf-lite</artifactId>
-      <version>${grpc.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.clevercloud</groupId>
-      <artifactId>biscuit-java</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
-    </dependency>
+  <dependency>
+    <groupId>fr.jetoile.hadoop</groupId>
+    <artifactId>hadoop-unit-pulsar-standalone</artifactId>
+    <version>${hadoop-unit.version}</version>
+    <scope>test</scope>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/junit/junit -->
+  <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+  <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.14.0</version>
+      <scope>test</scope>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+  <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+      <scope>test</scope>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
+  <dependency>
+    <groupId>io.vavr</groupId>
+    <artifactId>vavr</artifactId>
+    <version>0.10.2</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.apache.pulsar/pulsar-broker -->
+  <dependency>
+    <groupId>org.apache.pulsar</groupId>
+    <artifactId>pulsar-broker</artifactId>
+    <version>2.4.1</version>
+  </dependency>
+  <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-all</artifactId>
+    <version>${grpc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-core</artifactId>
+    <version>${grpc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-protobuf-lite</artifactId>
+    <version>${grpc.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>com.clevercloud</groupId>
+    <artifactId>biscuit-java</artifactId>
+    <version>0.1.0</version>
+  </dependency>
   </dependencies>
+
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.22.2</version>
+      <configuration>
+        <excludes>
+          <exclude>**/*IntegrationTest.java</exclude>
+        </excludes>
+      </configuration>
+      <executions>
+        <execution>
+          <id>integration-test</id>
+          <goals>
+            <goal>test</goal>
+          </goals>
+          <phase>integration-test</phase>
+          <configuration>
+            <excludes>
+              <exclude>none</exclude>
+            </excludes>
+            <includes>
+              <include>**/*IntegrationTest.java</include>
+            </includes>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+    <plugin>
+      <artifactId>hadoop-unit-maven-plugin</artifactId>
+      <groupId>fr.jetoile.hadoop</groupId>
+      <version>${hadoop-unit.version}</version>
+      <executions>
+        <execution>
+          <id>start</id>
+          <goals>
+            <goal>embedded-start</goal>
+          </goals>
+          <phase>pre-integration-test</phase>
+        </execution>
+        <execution>
+          <id>embedded-stop</id>
+          <goals>
+            <goal>embedded-stop</goal>
+          </goals>
+          <phase>post-integration-test</phase>
+        </execution>
+      </executions>
+      <configuration>
+        <components>
+          <componentArtifact implementation="fr.jetoile.hadoopunit.ComponentArtifact">
+            <componentName>PULSAR</componentName>
+            <groupId>fr.jetoile.hadoop</groupId>
+            <artifactId>hadoop-unit-pulsar-standalone</artifactId>
+            <version>${hadoop-unit.version}</version>
+            <mainClass>fr.jetoile.hadoopunit.component.PulsarStandaloneBootstrap</mainClass>
+          </componentArtifact>
+        </components>
+      </configuration>
+    </plugin>
+  </plugins>
+  </build>
 </project>
