--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <grpc.version>1.18.0</grpc.version>
-        <hadoop-unit.version>3.6</hadoop-unit.version>
+
         <biscuit-java.version>0.1.0</biscuit-java.version>
-        <pulsar-broker-common.version>2.4.1</pulsar-broker-common.version>
-        <logback-classic.version>1.2.3</logback-classic.version>
+        <pulsar-broker.version>2.4.1</pulsar-broker.version>
+        <grpc.version>1.18.0</grpc.version>
         <vavr.version>0.10.2</vavr.version>
+
+        <logback-classic.version>1.2.3</logback-classic.version>
+
+        <hadoop-unit.version>3.6</hadoop-unit.version>
     </properties>
 
     <dependencies>
@@ -34,7 +37,7 @@
         <dependency>
             <groupId>org.apache.pulsar</groupId>
             <artifactId>pulsar-broker-common</artifactId>
-            <version>${pulsar-broker-common.version}</version>
+            <version>${pulsar-broker.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -72,8 +75,20 @@
 
         <dependency>
             <groupId>org.apache.pulsar</groupId>
+            <artifactId>pulsar-broker</artifactId>
+            <version>${pulsar-broker.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pulsar</groupId>
             <artifactId>pulsar-client</artifactId>
-            <version>${pulsar-broker-common.version}</version>
+            <version>${pulsar-broker.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.10.1</version>
             <scope>test</scope>
         </dependency>
 
