--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>biscuit-pulsar</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>hadoop-unit</name>
+    <name>biscuit-pulsar</name>
     <url>https://github.com/clevercloud/biscuit-pulsar</url>
 
     <description>Biscuit Pulsar</description>
