--- a/biscuit-pulsar/pom.xml
+++ b/biscuit-pulsar/pom.xml
@@ -1,72 +1,45 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
+  <parent>
     <groupId>com.clevercloud</groupId>
-    <artifactId>biscuit-pulsar</artifactId>
+    <artifactId>biscuit-pulsar-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+  </parent>
 
-    <name>biscuit-pulsar</name>
+  <artifactId>biscuit-pulsar</artifactId>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
+  <properties>
+    <biscuit-java.version>0.1.0</biscuit-java.version>
+    <pulsar-broker.version>2.4.1</pulsar-broker.version>
+    <grpc.version>1.18.0</grpc.version>
+    <vavr.version>0.10.2</vavr.version>
 
-        <biscuit-java.version>0.1.0</biscuit-java.version>
-        <pulsar-broker.version>2.4.1</pulsar-broker.version>
-        <grpc.version>1.18.0</grpc.version>
-        <vavr.version>0.10.2</vavr.version>
-    </properties>
+    <logback-classic.version>1.2.3</logback-classic.version>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.vavr</groupId>
-            <artifactId>vavr</artifactId>
-            <version>${vavr.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.pulsar</groupId>
-            <artifactId>pulsar-broker-common</artifactId>
-            <version>${pulsar-broker.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.grpc</groupId>
-            <artifactId>grpc-all</artifactId>
-            <version>${grpc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.clevercloud</groupId>
-            <artifactId>biscuit-java</artifactId>
-            <version>${biscuit-java.version}</version>
-        </dependency>
+  <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.vavr</groupId>
+      <artifactId>vavr</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-broker-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-all</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.clevercloud</groupId>
+      <artifactId>biscuit-java</artifactId>
+    </dependency>
+  </dependencies>
 
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.14.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.pulsar</groupId>
-            <artifactId>pulsar-broker</artifactId>
-            <version>${pulsar-broker.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.pulsar</groupId>
-            <artifactId>pulsar-client</artifactId>
-            <version>${pulsar-broker.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 </project>
