--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
   <name>biscuit-pulsar-parent</name>
 
   <modules>
-    <!--<module>hadoop-unit-pulsar-biscuit</module>-->
     <module>biscuit-pulsar</module>
     <module>integration-test</module>
   </modules>
@@ -20,14 +19,15 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
 
+    <logback-classic.version>1.2.3</logback-classic.version>
     <biscuit-java.version>0.1.0</biscuit-java.version>
     <pulsar-broker.version>2.4.1</pulsar-broker.version>
     <grpc.version>1.18.0</grpc.version>
     <vavr.version>0.10.2</vavr.version>
 
-    <logback-classic.version>1.2.3</logback-classic.version>
-
-    <hadoop-unit.version>3.7-SNAPSHOT</hadoop-unit.version>
+    <assertj-core.version>3.14.0</assertj-core.version>
+    <junit.version>4.12</junit.version>
+    <jackson-annotations.version>2.10.1</jackson-annotations.version>
   </properties>
 
   <dependencyManagement>
@@ -57,13 +57,6 @@
         <artifactId>biscuit-java</artifactId>
         <version>${biscuit-java.version}</version>
       </dependency>
-
-      <dependency>
-        <groupId>fr.jetoile.hadoop</groupId>
-        <artifactId>hadoop-unit-commons</artifactId>
-        <version>${hadoop-unit.version}</version>
-      </dependency>
-
       <dependency>
         <groupId>org.apache.pulsar</groupId>
         <artifactId>pulsar-broker</artifactId>
@@ -77,27 +70,20 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>2.10.1</version>
+        <version>${jackson-annotations.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj-core.version}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <dependencies>
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.14.0</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
 </project>
