--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,17 @@
     <slf4j-api.version>1.7.29</slf4j-api.version>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>oss-sonatype</id>
+      <name>oss-sonatype</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
