--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -12,6 +12,16 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.clevercloud</groupId>
+      <artifactId>biscuit-java</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vavr</groupId>
+      <artifactId>vavr</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>fr.jetoile.hadoop</groupId>
       <artifactId>hadoop-unit-commons</artifactId>
       <version>${hadoop-unit.version}</version>
