--- a/integration-test/src/test/resources/hadoop-unit-default.properties
+++ b/integration-test/src/test/resources/hadoop-unit-default.properties
@@ -1,7 +1,7 @@
 tmp.dir.path=/tmp
 
 # Zookeeper
-zookeeper.temp.dir=/embedded_zk
+zookeeper.temp.dir=/zookeeper
 zookeeper.host=0.0.0.0
 zookeeper.port=22010
 
@@ -21,6 +21,6 @@ pulsar.client.ip=127.0.0.1
 bookkeeper.ip=0.0.0.0
 bookkeeper.port=31810
 bookkeeper.http.port=31900
-bookkeeper.temp.dir=/bookeeper
+bookkeeper.temp.dir=/bookkeeper
 
 bookkeeper.client.ip=0.0.0.0
