--- a/biscuit-pulsar/pom.xml
+++ b/biscuit-pulsar/pom.xml
@@ -17,6 +17,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
       <artifactId>pulsar-broker-common</artifactId>
     </dependency>
     <dependency>
