--- a/pom.xml
+++ b/pom.xml
@@ -48,23 +48,16 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>biscuit-pulsar-parent</groupId>
-        <artifactId>biscuit-pulsar</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.clevercloud</groupId>
-        <artifactId>biscuit-pulsar</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>com.clevercloud</groupId>
         <artifactId>biscuit-java</artifactId>
         <version>${biscuit-java.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>com.clevercloud</groupId>
+        <artifactId>biscuit-pulsar</artifactId>
+        <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
       <dependency>
         <groupId>io.vavr</groupId>
         <artifactId>vavr</artifactId>
@@ -137,6 +130,12 @@
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>${assertj-core.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>biscuit-pulsar-parent</groupId>
+        <artifactId>biscuit-pulsar</artifactId>
+        <version>${project.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
