--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -14,10 +14,9 @@
     <dependency>
       <groupId>com.clevercloud</groupId>
       <artifactId>biscuit-java</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>biscuit-pulsar-parent</groupId>
+      <groupId>com.clevercloud</groupId>
       <artifactId>biscuit-pulsar</artifactId>
       <scope>test</scope>
     </dependency>
